@@ -98,3 +98,4 @@
 /zipcode/drop_city_id_column.sql
 /city_zipcodes/create.sql
 /snap_data/create.sql
+/motor_vehicle_collisions/create.sql
